2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Don't filter out -g.  Actually pass correct CFLAGS to
	site.exp.
	* winsup.api/winsup.exp: Use -g flag from CFLAGS.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Turn off all optimizations.
	* libltp/lib/parse_opts.c (TEST_VALID_ENO): Move define outside of
	conditional.
	(TEST_ERRNO): Ditto.
	(btime): Ditto.
	(etime): Ditto.
	(tmptime): Ditto.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* libltp/include/usctest.h: Add externs to some variables that need it.
	* winsup.api/ltp/mmap05.c (main): Make file_content volatile to avoid
	optimization glitch.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/mmaptest03.c (main): Mark variables as volatile to avoid
	optimization induced problems.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile (check): Add cygrun.exe dependency.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	Perform more C warning fixup on all C source files and headers.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* libltp/include/test.h: Fix C warnings.
	* winsup.api/checksignal.c: Ditto.
	* winsup.api/crlf.c: Ditto.
	* winsup.api/devzero.c: Ditto.
	* winsup.api/iospeed.c: Ditto.
	* winsup.api/mmaptest01.c: Ditto.
	* winsup.api/mmaptest02.c: Ditto.
	* winsup.api/mmaptest03.c: Ditto.
	* winsup.api/mmaptest04.c: Ditto.
	* winsup.api/nullgetcwd.c: Ditto.
	* winsup.api/sigchld.c: Ditto.
	* winsup.api/signal-into-win32-api.c: Ditto.
	* winsup.api/systemcall.c: Ditto.
	* winsup.api/waitpid.c: Ditto.
	* winsup.api/pthread/mainthreadexits.c: Ditto.
	* winsup.api/pthread/test.h: Ditto.
	* winsup.api/pthread/threadidafterfork.c: Ditto.

	* Makefile.in: Remove cygrun.exe from RUNTIME since it is built here
	now.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Use ALL_CFLAGS to build test programs so that correct
	libraries and other options are used.

2003-01-22  Corinna Vinschen  <corinna@vinschen.de>
